[project]
name = "madebyutils"
version = "0.1.1"
description = "Utiity library make and use in house for MadeByAI's projects."
authors = [
    {name = "akraradets", email = "akraradets@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true